--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>DIGITAL DREAMZ 2k18</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -33,10 +33,10 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">DIGITAL DREAMZ 2k18</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Presented by
-<br>School of Computers 
-<br>Department of Computer Science and Engineering
-<br>A National Level Symposium with a grand cultural fest.</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Presented by</p>
+<h3>School of Computers 
+<br>Department of Computer Science and Engineering<h3>
+<p class="mbr-text pb-3 mbr-fonts-style display-5">A National Level Symposium with a grand cultural fest.</p>
                 
             </div>
         </div>
